@@ -23,26 +23,6 @@ name|java
 operator|.
 name|io
 operator|.
-name|File
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|FileNotFoundException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
 name|IOException
 import|;
 end_import
@@ -352,29 +332,6 @@ name|webappDir
 init|=
 literal|null
 decl_stmt|;
-try|try
-block|{
-name|webappDir
-operator|=
-name|getWebAppsPath
-argument_list|(
-literal|"webapps"
-operator|+
-name|File
-operator|.
-name|separator
-operator|+
-name|webappName
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|FileNotFoundException
-name|e
-parameter_list|)
-block|{
-comment|// Retry.  Resource may be inside jar on a windows machine.
 name|webappDir
 operator|=
 name|getWebAppsPath
@@ -384,7 +341,6 @@ operator|+
 name|webappName
 argument_list|)
 expr_stmt|;
-block|}
 return|return
 name|webappDir
 return|;
